--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<main id="main" class="col-xs-12">
 				<section id="first">
 					<h1 class="text-center">Tailor's Secret</h1>
-					<h2 class="text-center">Dobrodošli na zvaničnu prezentaciju Krojačkog salona "Tailor's Secret"</h2>
+					<h2 id="scroll" class="text-center"></h2>
 				</section> <!-- /#first -->
 				<section id="about">
 				<span class="spanAlign">
