--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	   				</form>
 	   				</div>
 	   					<!-- Google map -->
-					<div class="col-xs-12">
+					<div class="container">
 						<iframe class="hidden-xs" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:EitNYWprZSBKdWdvdmnEh2EgMTEsIEtydcWhZXZhYyAzNzAwMCwgU3JiaWph&key=AIzaSyCW_KZp3hAKkNFxwg6l5PnRLJ3Eitq7X7M" allowfullscreen></iframe>
 	   					<address class="address">
 	   						<p><span class="glyphicon glyphicon-user"></span>Vlasnik salona: Vesna Jović</p>
