--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				<span class="spanAlign">
 					<h1 class="text-center">Ko smo mi? Cime se bavimo?</h1><hr>
 					<div class="box">
-						<img  class="logo img-circle" src="img/logo_small.jpg" alt="Tailor's secret">
-						<img class=" back img-circle" src="img/back.jpg" alt="Backface">
+						<img  class="logo img-circle img-responsive" src="img/logo_small.jpg" alt="Tailor's secret">
+						<img class=" back img-circle img-responsive" src="img/back.jpg" alt="Backface">
 					</div>
 					<p>
 						
